# expenses-tracker

./: LICENSE  README.md  build.sh
backend/: .gitignore  Cargo.toml  public
backend/src/: config.rs  macros.rs  main.rs  models.rs  util.rs
backend/src/api/: defs.rs  error.rs  mod.rs
backend/src/api/auth/: defs.rs  extractor.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  util.rs
backend/src/api/expenses/: categories.rs  handlers.rs  mod.rs  transactions.rs
backend/src/db/: error.rs  mod.rs
backend/src/db/repo/: category_repo.rs  mod.rs  transaction_repo.rs  user_repo.rs
database/: dev_init.sh  schema.surql
frontend/: .prettierignore  .prettierrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: BioField.tsx  add-category.tsx  add-transaction.tsx  category.tsx  circular-progress.tsx  date-time-picker.tsx  edit-category.tsx  edit-transaction.tsx  error-component.tsx  icon-selector.tsx  icon.tsx  loading.tsx  password.tsx  responsive-overlay.tsx  ripple-button.tsx  theme-toggle.tsx  total-graph.tsx  transaction.tsx  with-auth.tsx
frontend/src/contexts/: auth-provider.tsx  theme-provider.tsx  use-top-bar.tsx
frontend/src/hooks/: index.ts  use-long-press.ts
frontend/src/lib/: defs.ts  utils.ts
frontend/src/pages/: expenses.tsx  sign-in.tsx  sign-up.tsx  transactions.tsx  wip.tsx
frontend/src/services/: auth-service.ts  auth.ts  expenses.ts  index.ts
frontend/src/styles/: category-colors.css
(+21 files in other folders)
